# OOP_Labs

./: .gitignore  .gitmodules
LR_1/: .gitignore  CMakeLists.txt  CMakePresets.json
LR_1/include/: my_function.h
LR_1/src/: main.cpp  my_function.cpp
LR_1/tests/: test_my_function.cpp
LR_2/: .gitignore  CMakeLists.txt
LR_2/include/: Eleven.h
LR_2/src/: Eleven.cpp  main.cpp
LR_2/tests/: test_eleven.cpp
LR_3/: CMakeLists.txt
LR_3/include/: Figure.h  FigureArray.h  Hexagon.h
LR_3/src/: FigureArray.cpp  Hexagon.cpp  main.cpp
LR_3/tests/: test_figures.cpp
LR_4/: CMakeLists.txt
LR_4/include/: Array.h  Concepts.h  Figure.h  FigureArray.h  Point.h  Rectangle.h  Rhombus.h  Trapezoid.h
LR_4/src/: main.cpp
LR_4/tests/: test_figures.cpp
LR_5/: CMakeLists.txt
LR_5/include/: DynamicArray.h  DynamicArrayIterator.h  FixedBlockMemoryResource.h
LR_5/src/: main.cpp
LR_5/tests/: test_dynamic_array.cpp
